# OCVCapture

./: CMakeLists.txt  OCVCapture.cpp  OCVCapture.h  camera.cpp
